--- a/BookExercise/Views/Home/Thanks.cshtml
+++ b/BookExercise/Views/Home/Thanks.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookExercise.Models.GuestResponse*@
+﻿@model BookExercise.Models.GuestResponse
 @{
     Layout = null;
 }
@@ -11,6 +11,6 @@
     <title>Thanks</title>
 </head>
 <body>
-    <h1>jkjm,ll, @Model.Name </h1>
+    <h1>Thanks, @Model.Name </h1>
 </body>
 </html>
