--- a/BookExercise/Views/Home/RsvpForm.cshtml
+++ b/BookExercise/Views/Home/RsvpForm.cshtml
@@ -3,6 +3,9 @@
     Layout = null;
 }
 
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+
 <!DOCTYPE html>
 
 <html>
@@ -11,7 +14,7 @@
     <title>RsvpForm</title>
 </head>
 <body>
-    <form asp-action="RsvpForm" method="post">
+    <form asp-controller="Home" asp-action="RsvpForm" method="post">
         <p>
             <label asp-for="Name">Your name:</label>
             <input asp-for="Name"/>
