переписав імя List Responses

--- a/BookExercise/Views/Home/Thanks.cshtml
+++ b/BookExercise/Views/Home/Thanks.cshtml
@@ -21,6 +21,6 @@
     {
         @:Sorry
     }
-    <p><a asp-action="ListResponse"> here</a> to see who is coming</p>
+    <p><a asp-action="ListResponses"> here</a> to see who is coming</p>
 </body>
 </html>
