--- a/BookExercise/Views/Home/RsvpForm.cshtml
+++ b/BookExercise/Views/Home/RsvpForm.cshtml
@@ -15,6 +15,7 @@
 </head>
 <body>
     <form asp-controller="Home" asp-action="RsvpForm" method="post">
+        <div asp-validation-summary="All"></div>
         <p>
             <label asp-for="Name">Your name:</label>
             <input asp-for="Name"/>
